jsbachParser.py
# Generated from jsbach.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class jsbachParser ( Parser ):

    grammarFileName = "jsbach.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'|:'", "':|'", "'('", "')'", "'<-'", 
                     "'<?>'", "'<!>'", "'<:>'", "'{'", "'}'", "'if'", "'else'", 
                     "'while'", "'#'", "'['", "']'", "'<<'", "'8<'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'='", "'/='", "'<'", "'>'", "'<='", 
                     "'>='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "KEY", "NUM", 
                      "VAR", "METHOD_NAME", "MES", "MENYS", "MUL", "DIV", 
                      "MOD", "EQ", "NEQ", "LT", "GT", "LEQ", "GEQ", "COMMENT", 
                      "STR", "WS" ]

    RULE_root = 0
    RULE_function = 1
    RULE_body = 2
    RULE_method_call = 3
    RULE_expr = 4
    RULE_assig = 5
    RULE_read = 6
    RULE_write = 7
    RULE_play = 8
    RULE_if_block = 9
    RULE_else_block = 10
    RULE_while_block = 11
    RULE_array = 12
    RULE_numsNkeys = 13
    RULE_getLength = 14
    RULE_getElem = 15
    RULE_addElem = 16
    RULE_rmElem = 17

    ruleNames =  [ "root", "function", "body", "method_call", "expr", "assig", 
                   "read", "write", "play", "if_block", "else_block", "while_block", 
                   "array", "numsNkeys", "getLength", "getElem", "addElem", 
                   "rmElem" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    KEY=19
    NUM=20
    VAR=21
    METHOD_NAME=22
    MES=23
    MENYS=24
    MUL=25
    DIV=26
    MOD=27
    EQ=28
    NEQ=29
    LT=30
    GT=31
    LEQ=32
    GEQ=33
    COMMENT=34
    STR=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(jsbachParser.EOF, 0)

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.FunctionContext)
            else:
                return self.getTypedRuleContext(jsbachParser.FunctionContext,i)


        def getRuleIndex(self):
            return jsbachParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = jsbachParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 36
                self.function()
                self.state = 39 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==jsbachParser.METHOD_NAME):
                    break

            self.state = 41
            self.match(jsbachParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def METHOD_NAME(self):
            return self.getToken(jsbachParser.METHOD_NAME, 0)

        def body(self):
            return self.getTypedRuleContext(jsbachParser.BodyContext,0)


        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(jsbachParser.VAR)
            else:
                return self.getToken(jsbachParser.VAR, i)

        def getRuleIndex(self):
            return jsbachParser.RULE_function

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = jsbachParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(jsbachParser.METHOD_NAME)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jsbachParser.VAR:
                self.state = 44
                self.match(jsbachParser.VAR)
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 50
            self.match(jsbachParser.T__0)
            self.state = 51
            self.body()
            self.state = 52
            self.match(jsbachParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExprContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExprContext,i)


        def assig(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.AssigContext)
            else:
                return self.getTypedRuleContext(jsbachParser.AssigContext,i)


        def read(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ReadContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ReadContext,i)


        def write(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.WriteContext)
            else:
                return self.getTypedRuleContext(jsbachParser.WriteContext,i)


        def play(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.PlayContext)
            else:
                return self.getTypedRuleContext(jsbachParser.PlayContext,i)


        def if_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.If_blockContext)
            else:
                return self.getTypedRuleContext(jsbachParser.If_blockContext,i)


        def while_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.While_blockContext)
            else:
                return self.getTypedRuleContext(jsbachParser.While_blockContext,i)


        def method_call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.Method_callContext)
            else:
                return self.getTypedRuleContext(jsbachParser.Method_callContext,i)


        def getRuleIndex(self):
            return jsbachParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = jsbachParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsbachParser.T__2) | (1 << jsbachParser.T__5) | (1 << jsbachParser.T__6) | (1 << jsbachParser.T__7) | (1 << jsbachParser.T__8) | (1 << jsbachParser.T__10) | (1 << jsbachParser.T__12) | (1 << jsbachParser.T__13) | (1 << jsbachParser.T__17) | (1 << jsbachParser.KEY) | (1 << jsbachParser.NUM) | (1 << jsbachParser.VAR) | (1 << jsbachParser.METHOD_NAME))) != 0):
                self.state = 62
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 54
                    self.expr(0)
                    pass

                elif la_ == 2:
                    self.state = 55
                    self.assig()
                    pass

                elif la_ == 3:
                    self.state = 56
                    self.read()
                    pass

                elif la_ == 4:
                    self.state = 57
                    self.write()
                    pass

                elif la_ == 5:
                    self.state = 58
                    self.play()
                    pass

                elif la_ == 6:
                    self.state = 59
                    self.if_block()
                    pass

                elif la_ == 7:
                    self.state = 60
                    self.while_block()
                    pass

                elif la_ == 8:
                    self.state = 61
                    self.method_call()
                    pass


                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def METHOD_NAME(self):
            return self.getToken(jsbachParser.METHOD_NAME, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExprContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExprContext,i)


        def getRuleIndex(self):
            return jsbachParser.RULE_method_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_call" ):
                return visitor.visitMethod_call(self)
            else:
                return visitor.visitChildren(self)




    def method_call(self):

        localctx = jsbachParser.Method_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_method_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(jsbachParser.METHOD_NAME)
            self.state = 71
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 68
                    self.expr(0) 
                self.state = 73
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExprContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExprContext,i)


        def NUM(self):
            return self.getToken(jsbachParser.NUM, 0)

        def VAR(self):
            return self.getToken(jsbachParser.VAR, 0)

        def KEY(self):
            return self.getToken(jsbachParser.KEY, 0)

        def array(self):
            return self.getTypedRuleContext(jsbachParser.ArrayContext,0)


        def getElem(self):
            return self.getTypedRuleContext(jsbachParser.GetElemContext,0)


        def getLength(self):
            return self.getTypedRuleContext(jsbachParser.GetLengthContext,0)


        def addElem(self):
            return self.getTypedRuleContext(jsbachParser.AddElemContext,0)


        def rmElem(self):
            return self.getTypedRuleContext(jsbachParser.RmElemContext,0)


        def EQ(self):
            return self.getToken(jsbachParser.EQ, 0)

        def NEQ(self):
            return self.getToken(jsbachParser.NEQ, 0)

        def LT(self):
            return self.getToken(jsbachParser.LT, 0)

        def GT(self):
            return self.getToken(jsbachParser.GT, 0)

        def LEQ(self):
            return self.getToken(jsbachParser.LEQ, 0)

        def GEQ(self):
            return self.getToken(jsbachParser.GEQ, 0)

        def MUL(self):
            return self.getToken(jsbachParser.MUL, 0)

        def DIV(self):
            return self.getToken(jsbachParser.DIV, 0)

        def MES(self):
            return self.getToken(jsbachParser.MES, 0)

        def MENYS(self):
            return self.getToken(jsbachParser.MENYS, 0)

        def getRuleIndex(self):
            return jsbachParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = jsbachParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 75
                self.match(jsbachParser.T__2)
                self.state = 76
                self.expr(0)
                self.state = 77
                self.match(jsbachParser.T__3)
                pass

            elif la_ == 2:
                self.state = 79
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsbachParser.KEY) | (1 << jsbachParser.NUM) | (1 << jsbachParser.VAR))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 3:
                self.state = 80
                self.array()
                pass

            elif la_ == 4:
                self.state = 81
                self.getElem()
                pass

            elif la_ == 5:
                self.state = 82
                self.getLength()
                pass

            elif la_ == 6:
                self.state = 83
                self.addElem()
                pass

            elif la_ == 7:
                self.state = 84
                self.rmElem()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 104
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 102
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = jsbachParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 87
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 88
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsbachParser.EQ) | (1 << jsbachParser.NEQ) | (1 << jsbachParser.LT) | (1 << jsbachParser.GT) | (1 << jsbachParser.LEQ) | (1 << jsbachParser.GEQ))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 89
                        self.expr(10)
                        pass

                    elif la_ == 2:
                        localctx = jsbachParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 90
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 91
                        _la = self._input.LA(1)
                        if not(_la==jsbachParser.MUL or _la==jsbachParser.DIV):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 94
                        self._errHandler.sync(self)
                        la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                        if la_ == 1:
                            self.state = 92
                            self.expr(0)
                            pass

                        elif la_ == 2:
                            self.state = 93
                            self.match(jsbachParser.VAR)
                            pass


                        pass

                    elif la_ == 3:
                        localctx = jsbachParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 96
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 97
                        _la = self._input.LA(1)
                        if not(_la==jsbachParser.MES or _la==jsbachParser.MENYS):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 100
                        self._errHandler.sync(self)
                        la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                        if la_ == 1:
                            self.state = 98
                            self.expr(0)
                            pass

                        elif la_ == 2:
                            self.state = 99
                            self.match(jsbachParser.VAR)
                            pass


                        pass

             
                self.state = 106
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class AssigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(jsbachParser.VAR, 0)

        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)


        def getRuleIndex(self):
            return jsbachParser.RULE_assig

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssig" ):
                return visitor.visitAssig(self)
            else:
                return visitor.visitChildren(self)




    def assig(self):

        localctx = jsbachParser.AssigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assig)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(jsbachParser.VAR)
            self.state = 108
            self.match(jsbachParser.T__4)

            self.state = 109
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(jsbachParser.VAR, 0)

        def getRuleIndex(self):
            return jsbachParser.RULE_read

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead" ):
                return visitor.visitRead(self)
            else:
                return visitor.visitChildren(self)




    def read(self):

        localctx = jsbachParser.ReadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_read)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(jsbachParser.T__5)
            self.state = 112
            self.match(jsbachParser.VAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WriteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STR(self, i:int=None):
            if i is None:
                return self.getTokens(jsbachParser.STR)
            else:
                return self.getToken(jsbachParser.STR, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExprContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExprContext,i)


        def getRuleIndex(self):
            return jsbachParser.RULE_write

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite" ):
                return visitor.visitWrite(self)
            else:
                return visitor.visitChildren(self)




    def write(self):

        localctx = jsbachParser.WriteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_write)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(jsbachParser.T__6)
            self.state = 117 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 117
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [jsbachParser.STR]:
                        self.state = 115
                        self.match(jsbachParser.STR)
                        pass
                    elif token in [jsbachParser.T__2, jsbachParser.T__8, jsbachParser.T__13, jsbachParser.T__17, jsbachParser.KEY, jsbachParser.NUM, jsbachParser.VAR]:
                        self.state = 116
                        self.expr(0)
                        pass
                    else:
                        raise NoViableAltException(self)


                else:
                    raise NoViableAltException(self)
                self.state = 119 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEY(self):
            return self.getToken(jsbachParser.KEY, 0)

        def numsNkeys(self):
            return self.getTypedRuleContext(jsbachParser.NumsNkeysContext,0)


        def VAR(self):
            return self.getToken(jsbachParser.VAR, 0)

        def getRuleIndex(self):
            return jsbachParser.RULE_play

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlay" ):
                return visitor.visitPlay(self)
            else:
                return visitor.visitChildren(self)




    def play(self):

        localctx = jsbachParser.PlayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_play)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(jsbachParser.T__7)
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [jsbachParser.KEY]:
                self.state = 122
                self.match(jsbachParser.KEY)
                pass
            elif token in [jsbachParser.T__8]:
                self.state = 123
                self.match(jsbachParser.T__8)
                self.state = 124
                self.numsNkeys()
                self.state = 125
                self.match(jsbachParser.T__9)
                pass
            elif token in [jsbachParser.VAR]:
                self.state = 127
                self.match(jsbachParser.VAR)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(jsbachParser.BodyContext,0)


        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)


        def KEY(self):
            return self.getToken(jsbachParser.KEY, 0)

        def else_block(self):
            return self.getTypedRuleContext(jsbachParser.Else_blockContext,0)


        def getRuleIndex(self):
            return jsbachParser.RULE_if_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_block" ):
                return visitor.visitIf_block(self)
            else:
                return visitor.visitChildren(self)




    def if_block(self):

        localctx = jsbachParser.If_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_if_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(jsbachParser.T__10)
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 131
                self.expr(0)
                pass

            elif la_ == 2:
                self.state = 132
                self.match(jsbachParser.KEY)
                pass


            self.state = 135
            self.match(jsbachParser.T__0)
            self.state = 136
            self.body()
            self.state = 137
            self.match(jsbachParser.T__1)
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==jsbachParser.T__11:
                self.state = 138
                self.else_block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(jsbachParser.BodyContext,0)


        def getRuleIndex(self):
            return jsbachParser.RULE_else_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElse_block" ):
                return visitor.visitElse_block(self)
            else:
                return visitor.visitChildren(self)




    def else_block(self):

        localctx = jsbachParser.Else_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_else_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(jsbachParser.T__11)
            self.state = 142
            self.match(jsbachParser.T__0)
            self.state = 143
            self.body()
            self.state = 144
            self.match(jsbachParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(jsbachParser.BodyContext,0)


        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)


        def getRuleIndex(self):
            return jsbachParser.RULE_while_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_block" ):
                return visitor.visitWhile_block(self)
            else:
                return visitor.visitChildren(self)




    def while_block(self):

        localctx = jsbachParser.While_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_while_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(jsbachParser.T__12)

            self.state = 147
            self.expr(0)
            self.state = 148
            self.match(jsbachParser.T__0)
            self.state = 149
            self.body()
            self.state = 150
            self.match(jsbachParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def numsNkeys(self):
            return self.getTypedRuleContext(jsbachParser.NumsNkeysContext,0)


        def getRuleIndex(self):
            return jsbachParser.RULE_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = jsbachParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_array)
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.match(jsbachParser.T__8)
                self.state = 153
                self.numsNkeys()
                self.state = 154
                self.match(jsbachParser.T__9)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.match(jsbachParser.T__8)
                self.state = 157
                self.match(jsbachParser.T__9)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumsNkeysContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(jsbachParser.NUM, 0)

        def VAR(self):
            return self.getToken(jsbachParser.VAR, 0)

        def numsNkeys(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.NumsNkeysContext)
            else:
                return self.getTypedRuleContext(jsbachParser.NumsNkeysContext,i)


        def KEY(self):
            return self.getToken(jsbachParser.KEY, 0)

        def getRuleIndex(self):
            return jsbachParser.RULE_numsNkeys
